--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
         </dependency>
+
+        <!--String Templates-->
+        <dependency>
+            <groupId>com.watchitlater</groupId>
+            <artifactId>spring-stringtemplate</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
