--- a/pom.xml
+++ b/pom.xml
@@ -11,18 +11,20 @@
     <properties>
         <java-version>1.6</java-version>
         <org.springframework.version>3.2.2.RELEASE</org.springframework.version>
-        <org.slf4j-version>1.6.1</org.slf4j-version>
+        <org.slf4j-version>1.6</org.slf4j-version>
         <jetty.port>8080</jetty.port>
     </properties>
 
     <build>
-        <resources>
-            <!-- -DsystemEnv -->
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
+        <testSourceDirectory>
+            ${project.basedir}/src/main/test/java
+        </testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}/src/main/test/resources</directory>
+            </testResource>
+        </testResources>
+
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
@@ -43,15 +45,6 @@
                         <extended>false</extended>
                         <logTimeZone>GMT</logTimeZone>
                     </requestLog>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.1</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -77,11 +70,19 @@
             <version>2.5</version>
         </dependency>
 
-        <!--JUNIT-->
+        <!--<TESTNG-->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.1.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--<JUNIT>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>4.10</version>
         </dependency>
 
         <!--String Templates-->
@@ -91,6 +92,22 @@
             <version>1.5.1</version>
         </dependency>
 
+        <!-- Selenium Webdriver-->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>2.32.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-server</artifactId>
+            <scope>test</scope>
+            <version>2.0rc3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.webdriver</groupId>
+            <artifactId>webdriver-firefox</artifactId>
+            <version>0.9.7089</version>
+        </dependency>
     </dependencies>
-
 </project>
