--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <org.springframework.version>3.2.2.RELEASE</org.springframework.version>
         <org.slf4j-version>1.6</org.slf4j-version>
         <jetty.port>8080</jetty.port>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
