--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -1,6 +1,6 @@
 ################### JDBC Configuration ##########################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sivalabs
+jdbc.url=jdbc:mysql://localhost:3306/twdb
 jdbc.username=root
 jdbc.password=admin
 
