--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,13 @@
             <artifactId>easymock</artifactId>
             <version>3.1</version>
         </dependency>
+
+        <!--jackson-->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.8.5</version>
+        </dependency>
     </dependencies>
 </project>
 
